// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storybook Tests Components/Footer footer 1`] = `
<div>
  <div
    class="footer"
    style="position: absolute; bottom: 0px; width: 100%; padding-bottom: 10px; height: 110px;"
  >
    <div
      class="row"
      style="font-size: .8rem; padding: 1rem .25rem .25rem .25rem;"
    >
      <div
        class="mx-auto text-center col-md-10"
      >
        Copyright © 2021 ~ NERACOOS
      </div>
    </div>
    <div
      class="row"
      style="font-size: .8rem; padding: .25rem;"
    >
      <div
        class="mx-auto text-center col-md-10"
      >
        Use
         
        <a
          href="https://docs.google.com/forms/d/e/1FAIpQLSdzP90655d-ZuDGpdgcMmTvxW1sgR_Hg4KI1KCfQDFU8MMF0g/viewform?usp=sf_link"
        >
          this form
        </a>
         
        to send us feedback or bug reports
      </div>
    </div>
    <div
      class="row"
      style="font-size: .8rem; padding: .25rem;"
    >
      <div
        class="mx-auto text-center col-md-10"
      >
        Product of 
        <a
          href="http://www.neracoos.org/"
        >
          NERACOOS.org
        </a>
         - Developed and maintained by the
         
        <a
          href="https://gmri.org/commitments/science/ocean-data-products/"
        >
          Gulf of Maine Research Institute
        </a>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storybook Tests ERDDAP/Info/Panel platformInfo 1`] = `
<div>
  <div
    class="card"
    role="complementary"
  >
    <div
      class="card-body"
    >
      <div
        class="card-title"
        role="header"
      >
        Station 
        M01
      </div>
      <p
        class="card-text"
      >
        Jordan Basin
        <br />
        <b>
          NDBC ID:
        </b>
         
        44037
        <br />
        <b>
          Lat:
        </b>
         
        43.5
         
        <b>
          Lon:
        </b>
         
        -67.87
        <br />
        <a
          href="http://gyre.umeoce.maine.edu/gomoos.php"
        >
          University of Maine
        </a>
        <br />
      </p>
    </div>
  </div>
</div>
`;

exports[`Storybook Tests ERDDAP/Superlatives Configurable 1`] = `
<div>
  <div
    class="card"
    style="margin-top: 1rem; margin-bottom: 1rem;"
  >
    <div
      class="card-header"
    >
      <h5>
        Latest Conditions
      </h5>
    </div>
    <div
      class="card-body"
    >
      <div
        class="row"
      >
        <div
          class="col"
        >
          <h6>
            Highest Winds
          </h6>
          <div>
            22.8
             
            Knots
          </div>
          <a
            href="/platform/WLIS"
          >
            <div>
              WLIS: Western Long Island Sound
            </div>
          </a>
        </div>
        <div
          class="col"
        >
          <h6>
            Biggest Waves
          </h6>
          <div>
            8.3
             
            ft
          </div>
          <a
            href="/platform/44008"
          >
            <div>
              44008: Southeast of Nantucket
            </div>
          </a>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storybook Tests ERDDAP/Superlatives ShouldNotShowOutdatedData 1`] = `
<div>
  <div
    class="card"
    style="margin-top: 1rem; margin-bottom: 1rem;"
  >
    <div
      class="card-header"
    >
      <h5>
        Latest Conditions
      </h5>
    </div>
    <div
      class="card-body"
    >
      <div
        class="row"
      >
        <div
          class="col"
        >
          <h6>
            Highest Winds
          </h6>
          <div>
             -- -- 
          </div>
        </div>
        <div
          class="col"
        >
          <h6>
            Biggest Waves
          </h6>
          <div>
             -- -- 
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storybook Tests Units/UnitSelector/configurable english 1`] = `
<div>
  <div
    class="unit-selector btn-group"
    role="group"
  >
    <button
      class="btn btn-light btn-sm"
      id="Metric"
      type="button"
    >
      Metric
    </button>
    <button
      class="btn btn-primary btn-sm active"
      id="English"
      type="button"
    >
      English
    </button>
  </div>
</div>
`;

exports[`Storybook Tests Units/UnitSelector/configurable metric 1`] = `
<div>
  <div
    class="unit-selector btn-group"
    role="group"
  >
    <button
      class="btn btn-primary btn-sm active"
      id="Metric"
      type="button"
    >
      Metric
    </button>
    <button
      class="btn btn-light btn-sm"
      id="English"
      type="button"
    >
      English
    </button>
  </div>
</div>
`;
